fdo#76249 DOCX export DML Drawing as lockedCanvas if it's inside DMLTextFrame

The Locked Canvas is imported correctly,
but while exporting the drawing is exported inside a textbox.
However a locked Canvas has to be exported inside a text-box
for the RT file to work in MS Word 2010.
As dml drawing elements are not allowed in the dml textboxes.

Export as Locked Canvas iff the drawing was originally a Locked Canvas
and is now inside a DML Text Frame.
As otherwise the Locked Canvas is exported correctly as a DMLDrawing.

Reviewed on:
	https://gerrit.libreoffice.org/8618

Change-Id: Ifa350d8922a22c4e480411530aa4d953bd3ed2ac