sw/source/filter/ww8/docxsdrexport.hxx
@@ -47,6 +47,7 @@ class DocxSdrExport
 {
     struct Impl;
     boost::shared_ptr<Impl> m_pImpl;
+    bool mbIsInDMLTextFrame;
 public:
     DocxSdrExport(DocxExport& rExport, sax_fastparser::FSHelperPtr pSerializer, oox::drawingml::DrawingML* pDrawingML);
     ~DocxSdrExport();
@@ -90,6 +91,8 @@ public:
                           com::sun::star::uno::Reference< com::sun::star::io::XOutputStream > xOutStream, OUString sGrabBagProperyName);
     /// Writes text frame in DML format.
     void writeDMLTextFrame(sw::Frame* pParentFrame, int nAnchorId);
+    bool getIsInDMLTextFrame() { return mbIsInDMLTextFrame; }
+    void setIsInDMLTextFrame(bool bIsInDMLTextFrame) { mbIsInDMLTextFrame = bIsInDMLTextFrame; }
     /// Writes text frame in VML format.
     void writeVMLTextFrame(sw::Frame* pParentFrame);
     /// Undo the text direction mangling done by the frame btLr handler in writerfilter::dmapper::DomainMapper::lcl_startCharacterGroup()
